--- a/lingfeng-framework/pom.xml
+++ b/lingfeng-framework/pom.xml
@@ -94,6 +94,12 @@
             <artifactId>aliyun-sdk-oss</artifactId>
         </dependency>
 
+        <!--七牛云OSS-->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+        </dependency>
+
         <!--AOP-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
